--- a/templates/blank.html
+++ b/templates/blank.html
@@ -1,7 +1,10 @@
 {% extends "index.html" %}
 
 {% block title %}Doug McIntosh{% endblock title %}
+{% block site_selection %}{% endblock site_selection %}
 {% block content %}
-<p> some cool new idea</p>
+<div style="text-align:center;background-color: #fff;width: 100vw; height:100vh">
+  <p> some cool new idea</p>
+</div>
 {% endblock content %}
 {% block search_results %} {% endblock search_results %}
