--- a/templates/youtube_search_results.html
+++ b/templates/youtube_search_results.html
@@ -3,7 +3,7 @@
 {{ super() }}
 {% endblock content %}
 {% block search_results %}
-<section>
+<section style="background-color: #fff;">
     {% include 'error_modal.html' %}
     {% include 'progress_bar.html' %}
     {% if content %}
