--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,53 +1,37 @@
-<div style="border: solid black 1px; display: flex; justify-content: space-between;vertical-align: middle; height: 40px; background-color: lightgray; margin-top: 3px">
-    <div>
-        <p style="margin-bottom:0;width:10vw" class="col-md-12 col-xs-12">Current: <b>{{session['curr_db'].split('/')[-1]}}</b></p>
-    </div>
-    <div style="display: flex;justify-content:space-between">
-        {% if content['show_db_choice'] %}
-        <input onclick="showNew();" type="image" src="static/assets/add_library.svg" height="25" alt="switch">
-        <form style="vertical-align: middle;" action="{{url_for('wiki_search')}}" method="post">
-            <select style="width:10vw" id="library_list" name="library_selection">
-                {% for each_l in databases %}
-                {% if each_l == session['curr_db'].split('/')[-1] %}
-                <option value="{{each_l}}" selected="selected">{{each_l}}</option>
-                {% else %}
-                <option value="{{each_l}}">{{each_l}}</option>
-                {% endif %}
-                {% endfor %}
-            </select>
-            <input style="height:auto" type="image" src="static/assets/switch.svg" alt="switch">
-        </form>
-        {% endif %}
-    </div>
-    <div style="display:flex">
-        <form id="search" action="{{ url_for('wiki_search_results') }}" method="post">
-            <div class="col-md-12 col-xs-12" style="vertical-align: middle">
-                <label for="search">New Topic:</label>
-                <input id="search" type="text" name="search_button" placeholder="Search Wikipedia...">
-                <input style="justify-content: space-around; height: auto" type="image" src="static/assets/search.svg" alt="search" />
-                <label for="pages"># of pages</label>
-                <select id="pages" name="pages">
-                    {% for myrange in range(5,101,5) %}
-                    <option value="{{myrange}}">{{myrange}}</option>
-                    {% endfor %}
-                </select>
-            </div>
-        </form>
-    </div>
-    <div style="display:flex;vertical-align:middle;justify-content:space-between">
-        <form class="col-md-12 col-xs-12" action="{{url_for('wiki_search')}}" method="post">
-            <input type="image" src="static/assets/library.svg" height="25" alt="graphs" />
-        </form>
-        <form class="col-md-12 col-xs-12" action="{{url_for('data_analysis')}}" method="post">
-            <input type="image" src="static/assets/graph.svg" height="25" alt="graphs" />
-        </form>
-        <form class="col-md-12 col-xs-12" action="{{url_for('site_traffic')}}" method="get">
-            <input type="image" src="static/assets/site_traffic.svg" height="25" alt="site traffic" />
-        </form>
-        <!--<form style="vertical-align: middle; margin-left: 5%" action="{{url_for('errors')}}" method="get">
-            <input type="image" src="static/assets/error.svg" height="25" alt="site traffic" />
-        </form>-->
-    </div>
+<div class="flex_container col-md-12 col-xs-12" style="width:100vw;border: solid black 1px; background-color: lightgray">
+    <input onclick="showNew();" type="image" src="static/assets/add_library.svg" height="25" alt="switch">
+    <form action="{{url_for('wiki_search')}}" method="post">
+        <select id="library_list" name="library_selection">
+            {% for each_l in databases %}
+            {% if each_l == session['curr_db'].split('/')[-1] %}
+            <option value="{{each_l}}" selected="selected">{{each_l}}</option>
+            {% else %}
+            <option value="{{each_l}}">{{each_l}}</option>
+            {% endif %}
+            {% endfor %}
+        </select>
+        <input style="height:auto" type="image" src="static/assets/switch.svg" alt="switch">
+    </form>
+    <form id="search" action="{{ url_for('wiki_search_results') }}" method="post">
+        <label for="search">New Topic:</label>
+        <input id="search" type="text" name="search_button" placeholder="Search Wikipedia...">
+        <input style="height: auto" type="image" src="static/assets/search.svg" alt="search" />
+        <label for="pages"># of pages</label>
+        <select id="pages" name="pages">
+            {% for myrange in range(5,101,5) %}
+            <option value="{{myrange}}">{{myrange}}</option>
+            {% endfor %}
+        </select>
+    </form>
+    <form action="{{url_for('wiki_search')}}" method="post">
+        <input type="image" src="static/assets/library.svg" height="25" alt="graphs" />
+    </form>
+    <form action="{{url_for('data_analysis')}}" method="post">
+        <input type="image" src="static/assets/graph.svg" height="25" alt="graphs" />
+    </form>
+    <form action="{{url_for('site_traffic')}}" method="get">
+        <input type="image" src="static/assets/site_traffic.svg" height="25" alt="site traffic" />
+    </form>
 </div>
 <div id="add_new" class="modal" style="display:none;margin-left:35vw;margin-top:35vh;width:35vw">
     <div class="modal-header">
@@ -62,31 +46,6 @@
         <br /><br />
     </div>
 </div>
-<style>
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: 100%;
-        gap: 20px;
-    }
-
-    .item1 {
-        grid-column: 1;
-        grid-row: 1;
-    }
-
-    .item2 {
-        grid-column: 2;
-        grid-row: 1;
-    }
-
-    .item3 {
-        grid-column: 3;
-        grid-row: 1;
-        justify-self: center;
-        align-self: end;
-    }
-</style>
 <script type="text/javascript">
     function showNew() {
         var close_btn = document.getElementById('add_close');
