--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type">
     <meta content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{% block title %}Doug McIntosh{% endblock %}</title>
     <!-- Bootstrap -->
@@ -13,7 +13,6 @@
     <link href="static/styles/bootstrap-theme.css" rel="stylesheet">
     <link rel="stylesheet" href="static/styles/swiper.min.css">
     <link href="static/styles/style.css" rel="stylesheet" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -42,7 +41,7 @@
     {% endblock site_selection %}
     {% block content %}{% endblock content %}
     {% block search_results %}{% endblock search_results %}
-    <!--<div style="width: 100vw; height: 2vh; position: fixed; bottom: 0px; background-color: #37324b"></div>-->
+    <!--<<div style="width: 100vw; height: 2vh; position: fixed; bottom: 0px; background-color: #37324b"></div>-->
     <!-- Some Javascript -->
     <script src="static/js/jquery-2.1.1.js"></script>
     <script src="static/js/swiper.jquery.min.js"></script>
