pushing to git to synchronize with vscode on my new mac

--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -43,7 +43,7 @@
                         </li>
                         <li>
                             &nbsp&nbsp&nbsp&nbsp<b>site_traffic_init Table</b>
-                            <p>This table stores all of the site traffic activity and is used to populate the charts when the 'site traffic' page is loaded.  Entries are deleted after a day.</p>
+                            <p>This table stores all of the site traffic activity and is used to populate the charts when the 'site traffic' page is loaded.  30 days worth of data are kept.</p>
                         </li>
                     </ul>
                 </li>
