--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
                         <li><a href="{{url_for('index')}}">Home</a></li>
                         <li><a href="{{url_for('aboutme')}}">About Me</a></li>
                         <li><a href="{{url_for('aboutthis')}}">About This Site</a></li>
-                        <li><a href="https://github.com/JackManu/portfolio" target="_blank">GitHub</a></li>
-                        <li><a href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">LinkedIn</a></li>
+                        <!--<li><a href="https://github.com/JackManu/portfolio" target="_blank">GitHub</a></li>
+                        <li><a href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">LinkedIn</a></li>-->
                         <li><a href="{{url_for('comments')}}">Feedback</a></li>
                     </ul>
                 </div>
