--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -126,9 +126,9 @@ input[type="checkbox"] .checkmark {
 }
 .flex_container {
     display:flex;
-    flex-direction:row !important;
+    flex-direction:row;
     flex-wrap: nowrap;
-    justify-content: space-around !important;
+    justify-content: space-around;
     align-items:center;
     height:50px;
 }
@@ -709,7 +709,15 @@ ul.main-nav.show-it {
   }
   .footer {
     padding: 1em 0em;
-  }  
+  }
+  .flex_container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 75px;
+  }
 }
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
@@ -724,6 +732,14 @@ ul.main-nav.show-it {
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
     /* Styles */
+    .flex_container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        align-items: center;
+        height: 75px;
+    }
 }
 
 /* iPads (portrait and landscape) ----------- */
