--- a/templates/site_selection_swiper.html
+++ b/templates/site_selection_swiper.html
@@ -19,6 +19,9 @@
                             <h3 class="text-left"><a href="{{url_for('android_app')}}">Android Drumming App</a></h3>
                         </div>
                         <div class="swiper-slide client-box">
+                            <h3 class="text-left"><a href="{{url_for('certifications')}}">Certifications</a></h3>
+                        </div>
+                        <div class="swiper-slide client-box">
                             <h3 class="text-left"><a href="{{url_for('blank')}}">something else</a></h3>
                         </div>
                     </div>
